Fixes and improvements for context menus
- Release player: "Search..." and "More from..." items in "More Actions"
menu and "Search..." item in tracklist context menu are automatically
disabled if there is a search running at the moment. This prevents
IllegalStateException from occuring due to the attempt to run parallel
search session.
- A limitation on context menu width has been set for player form and
release table menus. If text on some context menu items exceeds max
width, then it will be clipped and tooltip with full text will be
displayed on hovering such menu item with mouse.

--- a/BandcampExplorer/src/com/bandcamp/explorer/ui/style.css
+++ b/BandcampExplorer/src/com/bandcamp/explorer/ui/style.css
@@ -5,4 +5,5 @@
 
 .menu-item .label {
 	-fx-font-size: 14;
+	-fx-max-width: 300;
 }
